<resources>
    <string name="app_name">By-tyme</string>
    <string name="action_settings">Настройки</string>
    <string name="action_exit">Выход</string>
    <string name="action_info">О программе</string>
    <string name="button1">Один дома</string>
    <string name="button2">Для компании</string>
    <string name="button3">С ребенком(1-3 года)</string>
    <string name="button4">С ребенком(3-6 лет)</string>
    <string name="button5">С ребенком(старше 6 лет)</string>
    <string name="button6">Что же почитать?</string>
    <string name="action_main">Меню</string>
    <string name="title_activity_random_generetor">By-tyme</string>
    <string name="about">
        \n By-time\n
        Version 1.0\n
        Lindt Svetlana
    </string>
    <string name="pushButton">Мне кажется, или Вы забыли нажать на кнопку?</string>
    <string name="start">Start</string>
    <string-array name="settings_title">
        <item>Фон приложения</item>
        <item>Звук</item>
        <item>Вибрация</item>

    </string-array>

</resources>
