<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lsvdeveloper.svt.lindt.by_time_003.MainActivity"
    tools:showIn="@layout/main"
    android:orientation="vertical"
    android:theme="@style/styleActivity">

    <Button
        style="@style/styleText"
        android:text="@string/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        />
    <Button
        style="@style/styleText"
        android:text="@string/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        />
    <Button
        style="@style/styleText"
        android:text="@string/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        />
    <Button
        style="@style/styleText"
        android:text="@string/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        />
    <Button
        style="@style/styleText"
        android:text="@string/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        />
    <Button
        style="@style/styleText"
        android:text="@string/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        />
    <FrameLayout
        android:id="@+id/frgmCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
    </FrameLayout>

</LinearLayout>
